<resources>
    <string name="app_name">School Helper</string>
    <string name="book">КНИГА</string>
    <string name="gdz">ГДЗ</string>
    <string name="ua_lang">Украинский \n Язык</string>
    <string name="ua_lit">Украинская \n Литература</string>
    <string name="mathem">Математика</string>
    <string name="eng_lang">Английский \n Язык</string>
    <string name="сhemestry">Химия</string>
    <string name="fuzika">Физика</string>
    <string name="geografy">География</string>
    <string name="hyeta">Исскуство</string>
    <string name="instori_ua">История \n Украины</string>
    <string name="instory">Всемирная \n История</string>
    <string name="hyeta_huevaia">Немецкий \n Язык</string>
    <string name="ne_eby">Гражданское \n Образование</string>
    <string name="litra">Зарубежная \n Литература</string>
    <string name="ru_lang">Русский язык и Литература</string>
    <string name="zashita">Защита \n Отечества</string>
    <string name="todo">TODO</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">О приложении</string>
    <string name="a1">Обновление можно проверить \n во вкладке "Настройки", пункт "Проверить обновление"</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="timetable">Расписание</string>
    <string name="books">Учебники</string>
    <string name="timetabletime">Звонки</string>
    <string name="settings">Настройки</string>
    <string name="date">Число</string>
    <string name="predmet1">Урок 1</string>
    <string name="predmet2">Урок 2</string>
    <string name="predmet3">Урок 3</string>
    <string name="predmet4">Урок 4</string>
    <string name="predmet5">Урок 5</string>
    <string name="predmet6">Урок 6</string>
    <string name="predmet7">Урок 7</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>

    <string name="monday1">Понедельник 1</string>
    <string name="monday2">Понедельник 2</string>
    <string name="monday3">Понедельник 3</string>
    <string name="monday4">Понедельник 4</string>
    <string name="monday5">Понедельник 5</string>
    <string name="monday6">Понедельник 6</string>
    <string name="monday7">Понедельник 7</string>

    <string name="tuesday1">Фторник 1</string>
    <string name="tuesday2">Фторник 2</string>
    <string name="tuesday3">Фторник 3</string>
    <string name="tuesday4">Фторник 4</string>
    <string name="tuesday5">Фторник 5</string>
    <string name="tuesday6">Фторник 6</string>
    <string name="tuesday7">Фторник 7</string>

    <string name="wednesday1">Среда 1</string>
    <string name="wednesday2">Среда 2</string>
    <string name="wednesday3">Среда 3</string>
    <string name="wednesday4">Среда 4</string>
    <string name="wednesday5">Среда 5</string>
    <string name="wednesday6">Среда 6</string>
    <string name="wednesday7">Среда 7</string>

    <string name="thursday1">Четверг 1</string>
    <string name="thursday2">Четверг 2</string>
    <string name="thursday3">Четверг 3</string>
    <string name="thursday4">Четверг 4</string>
    <string name="thursday5">Четверг 5</string>
    <string name="thursday6">Четверг 6</string>
    <string name="thursday7">Четверг 7</string>

    <string name="friday1">Пятница 1</string>
    <string name="friday2">Пятница 2</string>
    <string name="friday3">Пятница 3</string>
    <string name="friday4">Пятница 4</string>
    <string name="friday5">Пятница 5</string>
    <string name="friday6">Пятница 6</string>
    <string name="friday7">Пятница 7</string>

</resources>