<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timetable">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:fontFamily="@font/yandex_bold"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:layout_weight="1"
        android:text="@string/timetable" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:onClick="onMyButtonClick"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/ic_baseline_home_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/timetable">
        </ImageView>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">



            <Button
                android:id="@+id/monday"
                android:layout_width="200dp"
                android:layout_height="45dp"

                android:background="@color/colorPrimary"
                android:fontFamily="@font/yandex_regular"
                android:onClick="onMyButtonClick"
                android:text="@string/monday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">


            <Button
                android:id="@+id/tuesday"
                android:onClick="onMyButtonClick"
                android:layout_width="200dp"
                android:layout_gravity="end"
                android:fontFamily="@font/yandex_regular"
                android:background="@color/colorPrimary"
                android:layout_height="45dp"
                android:text="@string/tuesday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/wednesday"
                android:onClick="onMyButtonClick"
                android:layout_width="200dp"
                android:layout_gravity="end"
                android:fontFamily="@font/yandex_regular"
                android:background="@color/colorPrimary"
                android:layout_height="45dp"
                android:text="@string/wednesday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">


            <Button
                android:id="@+id/thursday"
                android:onClick="onMyButtonClick"
                android:layout_width="200dp"
                android:layout_gravity="end"
                android:fontFamily="@font/yandex_regular"
                android:background="@color/colorPrimary"
                android:layout_height="45dp"
                android:text="@string/thursday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">


            <Button
                android:id="@+id/friday"
                android:onClick="onMyButtonClick"
                android:layout_width="200dp"
                android:layout_gravity="end"
                android:fontFamily="@font/yandex_regular"
                android:background="@color/colorPrimary"
                android:layout_height="45dp"
                android:text="@string/friday" />
        </LinearLayout>


    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>