<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimetableFriday">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:fontFamily="@font/yandex_bold"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:layout_weight="1"
            android:text="@string/friday" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:onClick="onMyButtonClick"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:hint="@string/date"
                        android:layout_height="wrap_content"
                        android:inputType="phone">
                    </EditText>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="1"
                        android:textSize="24sp"
                        android:fontFamily="@font/yandex_bold"
                        android:textColor="@color/black"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">

                    <EditText
                        android:id="@+id/et1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet1"
                        android:inputType="textCapWords">
                    </EditText>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="2"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:fontFamily="@font/yandex_bold"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">

                    <EditText
                        android:id="@+id/et2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet2"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="3"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/yandex_bold"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp">

                    <EditText
                        android:id="@+id/et3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet3"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="4"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/yandex_bold"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">

                    <EditText
                        android:id="@+id/et4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet4"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="5"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/yandex_bold"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">



                    <EditText
                        android:id="@+id/et5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet5"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="6"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/yandex_bold"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">


                    <EditText
                        android:id="@+id/et6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet6"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="7"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:fontFamily="@font/yandex_bold"
                        android:gravity="center">
                    </TextView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/gray"
                    android:layout_width="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="45dp">

                    <EditText
                        android:id="@+id/et7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/predmet7"
                        android:inputType="textCapWords" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="40dp"
                android:layout_height="wrap_content"
                android:text="SAVE">
            </Button>

            <Button
                android:id="@+id/btnLoad"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:text="Load">
            </Button>



        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>